gccida/g0/dump_conflicts
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/dump_conflicts/src/global.c:2388:19: error: use of undeclared identifier 'allocno_0'; did you mean 'allocno'?
if ( reg_renumber[allocno_0[( __int64)*( int *)&allocno_order[4 * i]].reg] < 0 ) 
                  ^~~~~~~~~
                  allocno
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/dump_conflicts/src/global.c:135:24: note: 'allocno' declared here
static struct allocno *allocno;
                       ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/dump_conflicts/src/global.c:2394:19: error: use of undeclared identifier 'allocno_0'; did you mean 'allocno'?
if ( reg_renumber[allocno_0[( __int64)*( int *)&allocno_order[4 * ia]].reg] < 0 ) 
                  ^~~~~~~~~
                  allocno
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/dump_conflicts/src/global.c:135:24: note: 'allocno' declared here
static struct allocno *allocno;
                       ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/dump_conflicts/src/global.c:2396:43: error: use of undeclared identifier 'allocno_0'
fprintf( file, off_779681, ( unsigned int)allocno_0[( __int64)*( int *)&allocno_order[4 * ia]].reg); 
                                          ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/dump_conflicts/src/global.c:2396:16: error: use of undeclared identifier 'off_779681'
fprintf( file, off_779681, ( unsigned int)allocno_0[( __int64)*( int *)&allocno_order[4 * ia]].reg); 
               ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/dump_conflicts/src/global.c:2400:9: error: use of undeclared identifier 'allocno_0'; did you mean 'allocno'?
&& j != allocno_0[( __int64)*( int *)&allocno_order[4 * ia]].reg ) 
        ^~~~~~~~~
        allocno
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/dump_conflicts/src/global.c:135:24: note: 'allocno' declared here
static struct allocno *allocno;
                       ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/dump_conflicts/src/global.c:2405:6: error: use of undeclared identifier 'allocno_0'; did you mean 'allocno'?
if ( allocno_0[( __int64)*( int *)&allocno_order[4 * ia]].size != 1 ) 
     ^~~~~~~~~
     allocno
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/dump_conflicts/src/global.c:135:24: note: 'allocno' declared here
static struct allocno *allocno;
                       ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/dump_conflicts/src/global.c:2406:41: error: use of undeclared identifier 'allocno_0'
fprintf( file, " ( %d)", ( unsigned int)allocno_0[( __int64)*( int *)&allocno_order[4 * ia]].size); 
                                        ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/dump_conflicts/src/global.c:2412:51: error: use of undeclared identifier 'allocno_0'
fprintf( file, ";; %d conflicts:", ( unsigned int)allocno_0[( __int64)ib].reg); 
                                                  ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/dump_conflicts/src/global.c:2416:43: error: use of undeclared identifier 'allocno_0'
fprintf( file, off_779681, ( unsigned int)allocno_0[( __int64)j_0].reg); 
                                          ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/dump_conflicts/src/global.c:2416:16: error: use of undeclared identifier 'off_779681'
fprintf( file, off_779681, ( unsigned int)allocno_0[( __int64)j_0].reg); 
               ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/dump_conflicts/src/global.c:2420:10: error: use of undeclared identifier 'allocno_0'; did you mean 'allocno'?
if ( ( ( allocno_0[( __int64)ib].hard_reg_conflicts >> j_0a) & 1) != 0 ) 
         ^~~~~~~~~
         allocno
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/dump_conflicts/src/global.c:135:24: note: 'allocno' declared here
static struct allocno *allocno;
                       ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/dump_conflicts/src/global.c:2421:16: error: use of undeclared identifier 'off_779681'
fprintf( file, off_779681, ( unsigned int)j_0a); 
               ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/dump_conflicts/src/global.c:2427:10: error: use of undeclared identifier 'allocno_0'; did you mean 'allocno'?
if ( ( ( allocno_0[( __int64)ib].hard_reg_preferences >> j_0b) & 1) != 0 ) 
         ^~~~~~~~~
         allocno
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/dump_conflicts/src/global.c:135:24: note: 'allocno' declared here
static struct allocno *allocno;
                       ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/dump_conflicts/src/global.c:2432:53: error: use of undeclared identifier 'allocno_0'
fprintf( file, ";; %d preferences:", ( unsigned int)allocno_0[( __int64)ib].reg); 
                                                    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/dump_conflicts/src/global.c:2435:10: error: use of undeclared identifier 'allocno_0'; did you mean 'allocno'?
if ( ( ( allocno_0[( __int64)ib].hard_reg_preferences >> j_0c) & 1) != 0 ) 
         ^~~~~~~~~
         allocno
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/dump_conflicts/src/global.c:135:24: note: 'allocno' declared here
static struct allocno *allocno;
                       ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/dump_conflicts/src/global.c:2436:16: error: use of undeclared identifier 'off_779681'
fprintf( file, off_779681, ( unsigned int)j_0c); 
               ^
16 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/dump_conflicts/src/obj/global.o] Error 1
